# AutoSense

./: README.md  dictionary.txt  feedback_memory.json
AutoSense/: CMakeLists.txt  TrieDS.cpp  analysis.py  analysisWindow.cpp  analysisWindow.h  api.py  apiHandler.cpp  apiHandler.h  dictionary.txt  feedback_memory.json  fileHandling.cpp  fileHandling.h  main.cpp  mainWindow.cpp  mainWindow.h  splashScreen.cpp  splashScreen.h  suggest.cpp  suggest.h  trie.cpp  trie.h
AutoSense/assets/: dictionary.txt  feedback_memory.json
AutoSense/assets/data/: train.csv
AutoSense/sentiment/sentiment/: analysis.py
